	cases

	* The mult and div instructions are now always handled inlined and
	the runtime functions multu and divu return a long result. This
	allows the MIPS hi/lo registers to be represented as normal Java
	local registers, which will be needed for future threading
	implementations. It might also improve performance in some cases

	* Implemented catching of exceptions in C with the
	NOPH_try(handler, arg) / NOPH_catch() pair

	* Fixed bug in jalr and jal where the destination registers were
	wrong

	* Switched to manage the project at google code,
	http://cibyl.googlecode.com, the subversion repository is at
	http://cibyl.googlecode.com/svn/

	* Implemented the option --optimize-indirect-calls, which provides
	a more compact global jumptab (containing only those functions
	which are used through function pointers instead of all
	functions). This significantly reduces the size of most
	applications.

	* The test application now outputs on a console, which allows it
	to run on real phones. Also reduced the output generated and
	renamed the application.

	* Fixed Font.charWidth() with a non-generated implementation

	* Optimized the cleanup register generation (fewer registers are
	now cleaned)

	* Fixed a bug in __fixunssfsi_helper.java where values above or
	equal to 1^32 were incorrectly handled (truncated)

	* More floating point and double checks, and better support for
	typecast checks in the test framework

	* Added optimizations to inline function calls to builtin
	functionality (currently the floating point support). This can be
	enabled by passing --optimize-inline-all-builtins (enable
	globally) or --optimize-inline-builtins=FUNCTIONS (enable for a
	set of functions). This can significantly improve the performance
	of floating point operations, but will also increase the
	class size.

	Implemented builtin optimizations for much of the float support

	* Emit .line and .var information only if -g is defined
