@@ -1,29 +1,19 @@
-public static final int NOPH_Connector_openFILEInputStream(int _name)
+public static final int NOPH_Connector_openFILEInputStream(int _name) throws Exception
 {
     String name = CRunTime.charPtrToString(_name);
 
-    CRunTime.clearException();
-
-    try
-      {
 #if defined(JSR075)
-	FileConnection fc = (FileConnection)Connector.open(name, Connector.READ);
-	DataInputStream s = fc.openDataInputStream();
+    FileConnection fc = (FileConnection)Connector.open(name, Connector.READ);
+    DataInputStream s = fc.openDataInputStream();
 #else
-	DataInputStream s = Connector.openDataInputStream(name);
+    DataInputStream s = Connector.openDataInputStream(name);
 #endif /* JSR075 */
-	CibylFile f = new CibylFile(name);
+    CibylFile f = new CibylFile(name);
 
 #if defined(JSR075)
-	f.fc = fc;
+    f.fc = fc;
 #endif /* JSR075 */
-	f.inputStream = (InputStream)s;
+    f.inputStream = (InputStream)s;
 
-	return CRunTime.registerObject(f);
-      }
-    catch (Exception e)
-      {
-	CRunTime.setException(e);
-	return 0;
-      }
+    return CRunTime.registerObject(f);
 }
