@@ -1,13 +1,7 @@
- public static final int NOPH_Connector_openFileConnection(int __name) {
+ public static final int NOPH_Connector_openFileConnection(int __name) throws Exception {
      String name = CRunTime.charPtrToString(__name);
 
-     try {
-         CRunTime.clearException();
-         FileConnection ret = (FileConnection)Connector.open(name);
-         int registeredHandle = CRunTime.registerObject(ret);
-         return registeredHandle;
-     }catch(Exception e) {
-         CRunTime.setException(e);
-         return 0;
-     }
+     FileConnection ret = (FileConnection)Connector.open(name);
+     int registeredHandle = CRunTime.registerObject(ret);
+     return registeredHandle;
  }
