@@ -1,4 +1,4 @@
-	public static final int NOPH_RecordStore_addRecord(int _rs, int _newData, int offset, int numBytes)
+	public static final int NOPH_RecordStore_addRecord(int _rs, int _newData, int offset, int numBytes) throws Exception
         {
 	  RecordStore rs = (RecordStore)CRunTime.getRegisteredObject( _rs );
 	  byte newData[] = new byte[numBytes];
@@ -6,15 +6,5 @@
 	  for (int i = 0; i < numBytes; i++)
 	    newData[i] = (byte)CRunTime.memoryReadByteUnsigned(_newData + offset + i);
 
-	  try
-	    {
-	      CRunTime.clearException();
-	      return rs.addRecord(newData, 0, numBytes);
-	    }
-	  catch(Exception e)
-	    {
-	      CRunTime.setException(e);
-	    }
-
-	  return 0;
+          return rs.addRecord(newData, 0, numBytes);
 	}
